Updated comments and readme

--- a/55-xbee.html
+++ b/55-xbee.html
@@ -12,6 +12,10 @@
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
+  
+  NR-XBee - Node-RED module to support use of XBee wireless modules
+  Highly inspired by Node-RED's own serial and mqtt modules. 
+
 -->
 
 <script type="text/x-red" data-template-name="xbee in">
